[gd_scene load_steps=19 format=3 uid="uid://dmpmaq03n5363"]

[ext_resource type="Script" path="res://breakout.gd" id="1_5gvse"]
[ext_resource type="Script" path="res://paddle.gd" id="1_8ov5v"]
[ext_resource type="FontFile" uid="uid://c0mbmk6un4rrg" path="res://Beachball/PC/Beachball.ttf" id="1_jsjfx"]
[ext_resource type="Script" path="res://ball.gd" id="2_vb11p"]
[ext_resource type="PackedScene" uid="uid://c76vh2yn4sqt3" path="res://title_screen.tscn" id="5_a8qad"]
[ext_resource type="AudioStream" uid="uid://bkx2nuvllo0mw" path="res://rebound.wav" id="6_qprgk"]
[ext_resource type="AudioStream" uid="uid://bcktt1xk4gho8" path="res://scored.wav" id="7_ls2wj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o3rv6"]
size = Vector2(512, 36)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pg3n2"]
size = Vector2(8, 640)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hrvgd"]
size = Vector2(8, 650)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xgqwp"]
size = Vector2(512, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_47qg3"]
size = Vector2(32, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kk7ts"]
size = Vector2(8, 8)

[sub_resource type="Animation" id="Animation_e1ku0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Ball:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UI/ActionStoppedVeil:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("UI/GameOverText:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("UI/ResumeText:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_120vo"]
resource_name = "game_over_instructions_fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/ResumeText:modulate")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_iwp4s"]
resource_name = "game_over_text_fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/GameOverText:modulate")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_bfdxj"]
resource_name = "new_ball"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Ball:modulate")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.4, 0.6, 0.833333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(0.2, 0.2, 0.2, 1), Color(1, 1, 1, 1), Color(0.2, 0.2, 0.2, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_httnl"]
_data = {
"RESET": SubResource("Animation_e1ku0"),
"game_over_instructions_fade_in": SubResource("Animation_120vo"),
"game_over_text_fade_in": SubResource("Animation_iwp4s"),
"new_ball": SubResource("Animation_bfdxj")
}

[node name="Breakout" type="Node2D"]
script = ExtResource("1_5gvse")
brick_score = null
bricks_per_line = null
state = null
starting_lives = null
starting_score = null

[node name="Background" type="Polygon2D" parent="."]
color = Color(0.2, 0.2, 0.2, 1)
polygon = PackedVector2Array(0, 0, 512, 0, 512, 640, 0, 640)

[node name="BricksContainer" type="Node2D" parent="."]

[node name="OutOfBounds" type="Area2D" parent="."]
position = Vector2(0, 656)

[node name="CollisionShape2D" type="CollisionShape2D" parent="OutOfBounds"]
position = Vector2(256, 18)
shape = SubResource("RectangleShape2D_o3rv6")

[node name="Walls" type="Node2D" parent="."]

[node name="WallLeft" type="StaticBody2D" parent="Walls"]

[node name="Polygon2D" type="Polygon2D" parent="Walls/WallLeft"]
color = Color(0.8, 0.8, 0.8, 1)
polygon = PackedVector2Array(0, 0, 8, 0, 8, 640, 0, 640)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/WallLeft"]
position = Vector2(4, 320)
shape = SubResource("RectangleShape2D_pg3n2")

[node name="WallRight" type="StaticBody2D" parent="Walls"]
position = Vector2(512, 0)

[node name="Polygon2D" type="Polygon2D" parent="Walls/WallRight"]
color = Color(0.8, 0.8, 0.8, 1)
polygon = PackedVector2Array(0, 0, -8, 0, -8, 640, 0, 640)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/WallRight"]
position = Vector2(-4, 315)
shape = SubResource("RectangleShape2D_hrvgd")

[node name="WallTop" type="StaticBody2D" parent="Walls"]

[node name="Polygon2D" type="Polygon2D" parent="Walls/WallTop"]
color = Color(0.8, 0.8, 0.8, 1)
polygon = PackedVector2Array(0, 64, 0, 96, 512, 96, 512, 64)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/WallTop"]
position = Vector2(256, 80)
shape = SubResource("RectangleShape2D_xgqwp")

[node name="ColorIndicators" type="Node2D" parent="Walls"]

[node name="BlueLeft" type="Polygon2D" parent="Walls/ColorIndicators"]
position = Vector2(0, 592)
color = Color(0.32, 0.32, 1, 1)
polygon = PackedVector2Array(0, 0, 8, 0, 8, 16, 0, 16)

[node name="BlueRight" type="Polygon2D" parent="Walls/ColorIndicators"]
position = Vector2(504, 592)
color = Color(0.32, 0.32, 1, 1)
polygon = PackedVector2Array(0, 0, 8, 0, 8, 16, 0, 16)

[node name="RedLeft" type="Polygon2D" parent="Walls/ColorIndicators"]
position = Vector2(0, 160)
color = Color(1, 0.321569, 0.321569, 1)
polygon = PackedVector2Array(0, 0, 8, 0, 8, 32, 0, 32)

[node name="RedRight" type="Polygon2D" parent="Walls/ColorIndicators"]
position = Vector2(504, 160)
color = Color(1, 0.321569, 0.321569, 1)
polygon = PackedVector2Array(0, 0, 8, 0, 8, 32, 0, 32)

[node name="OrangeLeft" type="Polygon2D" parent="Walls/ColorIndicators"]
position = Vector2(0, 192)
color = Color(0.96, 0.70976, 0.3072, 1)
polygon = PackedVector2Array(0, 0, 8, 0, 8, 32, 0, 32)

[node name="OrangeRight" type="Polygon2D" parent="Walls/ColorIndicators"]
position = Vector2(504, 192)
color = Color(0.96, 0.70976, 0.3072, 1)
polygon = PackedVector2Array(0, 0, 8, 0, 8, 32, 0, 32)

[node name="YellowLeft" type="Polygon2D" parent="Walls/ColorIndicators"]
position = Vector2(0, 224)
color = Color(0.93344, 0.96, 0.1632, 1)
polygon = PackedVector2Array(0, 0, 8, 0, 8, 32, 0, 32)

[node name="YellowRight" type="Polygon2D" parent="Walls/ColorIndicators"]
position = Vector2(504, 224)
color = Color(0.93344, 0.96, 0.1632, 1)
polygon = PackedVector2Array(0, 0, 8, 0, 8, 32, 0, 32)

[node name="GreenLeft" type="Polygon2D" parent="Walls/ColorIndicators"]
position = Vector2(0, 256)
color = Color(0.28567, 0.66, 0.1122, 1)
polygon = PackedVector2Array(0, 0, 8, 0, 8, 32, 0, 32)

[node name="GreenRight" type="Polygon2D" parent="Walls/ColorIndicators"]
position = Vector2(504, 256)
color = Color(0.28567, 0.66, 0.1122, 1)
polygon = PackedVector2Array(0, 0, 8, 0, 8, 32, 0, 32)

[node name="Paddle" type="CharacterBody2D" parent="."]
unique_name_in_owner = true
position = Vector2(256, 600)
motion_mode = 1
script = ExtResource("1_8ov5v")

[node name="Polygon2D" type="Polygon2D" parent="Paddle"]
color = Color(0.321569, 0.321569, 1, 1)
offset = Vector2(-16, -8)
polygon = PackedVector2Array(0, 0, 32, 0, 32, 16, 0, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Paddle"]
shape = SubResource("RectangleShape2D_47qg3")

[node name="Ball" type="CharacterBody2D" parent="."]
unique_name_in_owner = true
position = Vector2(1024, 384)
script = ExtResource("2_vb11p")
speed = null
speed_multiplier = null
new_ball_delay = null

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
position = Vector2(4, 4)
shape = SubResource("RectangleShape2D_kk7ts")

[node name="Polygon2D" type="Polygon2D" parent="Ball"]
color = Color(0.866667, 0.866667, 0.866667, 1)
polygon = PackedVector2Array(0, 0, 8, 0, 8, 8, 0, 8)

[node name="UI" type="Node2D" parent="."]

[node name="LivesText" type="RichTextLabel" parent="UI" groups=["UI_element"]]
unique_name_in_owner = true
clip_contents = false
offset_left = 20.0
offset_top = 112.0
offset_right = 100.0
offset_bottom = 192.0
theme_override_colors/default_color = Color(0.866667, 0.866667, 0.866667, 1)
theme_override_fonts/normal_font = ExtResource("1_jsjfx")
theme_override_font_sizes/normal_font_size = 50
text = "3"

[node name="ScoreText" type="RichTextLabel" parent="UI" groups=["UI_element"]]
unique_name_in_owner = true
clip_contents = false
offset_left = 336.0
offset_top = 112.0
offset_right = 496.0
offset_bottom = 212.0
theme_override_colors/default_color = Color(0.866667, 0.866667, 0.866667, 1)
theme_override_fonts/normal_font = ExtResource("1_jsjfx")
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[right]000[/right]"

[node name="ActionStoppedVeil" type="Polygon2D" parent="UI" groups=["UI_element"]]
unique_name_in_owner = true
color = Color(0, 0, 0, 0.8)
polygon = PackedVector2Array(0, 0, 512, 0, 512, 640, 0, 640)

[node name="GameOverText" type="RichTextLabel" parent="UI" groups=["UI_element"]]
unique_name_in_owner = true
visible = false
top_level = true
offset_left = 128.0
offset_top = 64.0
offset_right = 528.0
offset_bottom = 184.0
theme_override_colors/default_color = Color(0.866667, 0.866667, 0.866667, 1)
theme_override_fonts/normal_font = ExtResource("1_jsjfx")
theme_override_font_sizes/normal_font_size = 30
text = "
GAME OVER"

[node name="HighScores" type="RichTextLabel" parent="UI" groups=["UI_element"]]
unique_name_in_owner = true
visible = false
offset_left = 128.0
offset_top = 160.0
offset_right = 384.0
offset_bottom = 544.0
theme_override_colors/default_color = Color(0.866667, 0.866667, 0.866667, 1)
theme_override_fonts/normal_font = ExtResource("1_jsjfx")
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "
[center]HIGHSCORES[/center]



1.

2.

3.

4.

5."

[node name="GamePausedText" type="RichTextLabel" parent="UI" groups=["UI_element"]]
unique_name_in_owner = true
visible = false
offset_left = 96.0
offset_top = 314.0
offset_right = 464.0
offset_bottom = 434.0
theme_override_colors/default_color = Color(0.866667, 0.866667, 0.866667, 1)
theme_override_fonts/normal_font = ExtResource("1_jsjfx")
theme_override_font_sizes/normal_font_size = 30
text = "
GAME PAUSED"

[node name="TitleScreen" parent="UI" instance=ExtResource("5_a8qad")]
unique_name_in_owner = true

[node name="ResumeText" type="RichTextLabel" parent="UI"]
unique_name_in_owner = true
offset_left = 128.0
offset_top = 512.0
offset_right = 384.0
offset_bottom = 592.0
theme_override_colors/default_color = Color(0.866667, 0.866667, 0.866667, 1)
theme_override_fonts/normal_font = ExtResource("1_jsjfx")
bbcode_enabled = true
text = "
[center]press ESC 

to resume[/center]"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_httnl")
}

[node name="ReboundAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("6_qprgk")

[node name="ScoreAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("7_ls2wj")

[connection signal="body_entered" from="OutOfBounds" to="." method="_on_out_of_bounds_body_entered"]
